tests/baselines/reference/ambientClassOverloadForFunction.errors.txt
==== tests/cases/compiler/ambientClassOverloadForFunction.ts (1 errors) ====
    declare class foo{};
    function foo() { return null; }
             ~~~
!!! error TS2000: Duplicate identifier 'foo'.
    